--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "apiFeatures.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.2.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "exceljs": "^4.3.0",
+    "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "hbs": "^4.2.0",
     "i": "^0.3.7",
@@ -30,8 +31,8 @@
     "mongoose": "^6.5.2",
     "node": "^18.12.1",
     "nodemailer": "^6.8.0",
+    "nodemon": "^3.1.4",
     "npm": "^9.3.1",
-    
     "stream-browserify": "^3.0.0",
     "typescript": "^4.8.3",
     "validator": "^13.7.0",
